# ProgettoPCS2025

Pierandrei_Scala-ProgettoPCS/: PROGRAMMAZIONE E CALCOLO SCIENTIFICO.pptx
Pierandrei_Scala-ProgettoPCS/CodiceSorgenteProgetto/: CMakeLists.txt  main.cpp  main_test.cpp
Pierandrei_Scala-ProgettoPCS/CodiceSorgenteProgetto/ExportParaview/: CMakeLists.txt
Pierandrei_Scala-ProgettoPCS/CodiceSorgenteProgetto/Release/: CMakeCache.txt  Makefile  Poliedro  PoliedroTest  cmake_install.cmake
Pierandrei_Scala-ProgettoPCS/CodiceSorgenteProgetto/Release/ExportParaview/: Makefile  cmake_install.cmake
Pierandrei_Scala-ProgettoPCS/CodiceSorgenteProgetto/Release/src/: Makefile  cmake_install.cmake
Pierandrei_Scala-ProgettoPCS/CodiceSorgenteProgetto/Release/src_test/: Makefile  cmake_install.cmake
Pierandrei_Scala-ProgettoPCS/CodiceSorgenteProgetto/src/: CMakeLists.txt  Poliedro.hpp  Utils.cpp  Utils.hpp
Pierandrei_Scala-ProgettoPCS/CodiceSorgenteProgetto/src_test/: CMakeLists.txt  test.hpp
